--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="https://kit.fontawesome.com/3743cd46f7.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./style/style.css" class="css">
+    <link rel="stylesheet" href="./styles/style.css" class="css">
 </head>
 <body>
     <header class="header-container">
