Képek hivatkozásának megváltoztatása

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                         <h3>Projekt <span>1</span></h3>
                     </div>
                     <div class="portfolio-img">
-                        <img src="./Img/projekt1.jpg" alt="projekt1">
+                        <img src="./img/projekt1.jpg" alt="projekt1">
                     </div>
                 </div>
                 <div class="portfolio-box">
@@ -94,7 +94,7 @@
                         <h3>Projekt <span>2</span></h3>
                     </div>
                     <div class="portfolio-img">
-                        <img src="./Img/projekt2.jpg" alt="projekt2">
+                        <img src="./img/projekt2.jpg" alt="projekt2">
                     </div>
                 </div>
                 <div class="portfolio-box">
@@ -102,7 +102,7 @@
                         <h3>Projekt <span>3</span></h3>
                     </div>
                     <div class="portfolio-img">
-                        <img src="./Img/projekt3.jpg" alt="projekt3">
+                        <img src="./img/projekt3.jpg" alt="projekt3">
                     </div>
                 </div>
                 <div class="portfolio-box">
@@ -110,7 +110,7 @@
                         <h3>Projekt <span>4</span></h3>
                     </div>
                     <div class="portfolio-img">
-                        <img src="./Img/projekt4.jpg" alt="projekt4">
+                        <img src="./img/projekt4.jpg" alt="projekt4">
                     </div>
                 </div>
                 <div class="portfolio-box">
@@ -118,7 +118,7 @@
                         <h3>Projekt <span>5</span></h3>
                     </div>
                     <div class="portfolio-img">
-                        <img src="./Img/projekt5.jpg" alt="projekt5">
+                        <img src="./img/projekt5.jpg" alt="projekt5">
                     </div>
                 </div>
                 <div class="portfolio-box">
@@ -126,7 +126,7 @@
                         <h3>Projekt <span>6</span></h3>
                     </div>
                     <div class="portfolio-img">
-                        <img src="./Img/projekt6.jpg" alt="projekt6">
+                        <img src="./img/projekt6.jpg" alt="projekt6">
                     </div>
                 </div>
             </div>
@@ -137,7 +137,7 @@
             </div>
             <div class="about-container">
                 <div class="img-box">
-                    <img src="./Img/rolam.jpg" alt="aboutme">
+                    <img src="./img/rolam.jpg" alt="aboutme">
                 </div>
                 <div class="text-box">
                     <h3><span>S</span>ebestyén <span>S</span>ándor</h3>
